--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<groupId>
+				org.springframework.cloud</groupId>
+			<artifactId>
+				spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>
@@ -74,11 +76,11 @@
 				com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.modelmapper</groupId>-->
-		<!--			<artifactId>modelmapper</artifactId>-->
-		<!--			<version>2.4.4</version>-->
-		<!--		</dependency>-->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 		<!-- Jackson Databind -->
 		<dependency>
 			<groupId>
