--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,21 +2,22 @@ spring:
   application:
     name: userms
   datasource:
-    url: jdbc:sqlserver://192.168.3.3:1433;databaseName=userspt;encrypt=true;trustServerCertificate=true;
-    username: sa
-    password: '040201'
+    url: jdbc:sqlserver://upiita-pt.database.windows.net:1433;database=microserviciosPT;user=upiita@upiita-pt;password=Ipn2024!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    username: upiita
+    password: 'Ipn2024!'
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
       ddl-auto: update
 server:
-  port: 8082
+  port: 8083
 eureka:
   instance:
+    ip-address: 158.23.81.1
     instance-id: ${spring.application.name}:${random.value}
     prefer-ip-address: true
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://158.23.81.1:8761/eureka
