--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,13 @@ spring:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
+      show_sql: true
+      properties:
+        hibernate.format_sql: true
+logging:
+  level:
+    com.zaxxer.hikari: DEBUG
 server:
   port: 8083
 eureka:
