feat: Escritura de logs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
       properties:
         hibernate.format_sql: true
 logging:
-  level:
-    com.zaxxer.hikari: DEBUG
+  file:
+    name: ./logs/usersms-${date:yyyy-MM-dd}.log # Archivo con fecha en el nombre
 server:
   port: 8083
 eureka:
