fix: Se arregla jdbc

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: userms
   datasource:
-    url: jdbc:sqlserver://upiita-pt.database.windows.net:1433;database=microserviciosPT;user=upiita@upiita-pt;password=Ipn2024!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    username: upiita
+    url: jdbc:sqlserver://158.23.246.23:1433;database=microserviciosPT;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    username: sa
     password: 'Ipn2024!'
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
@@ -19,11 +19,11 @@ server:
   port: 8083
 eureka:
   instance:
-    ip-address: 158.23.81.1
+    ip-address: 158.23.246.23
     instance-id: ${spring.application.name}:${random.value}
     prefer-ip-address: true
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://158.23.81.1:8761/eureka
+      defaultZone: http://158.23.246.23:8761/eureka
